working using ogm, neo4j server (citation, persona, event, sameness)